--- a/core/app/views/Cooperators/b2bCustomInfoIndex.html
+++ b/core/app/views/Cooperators/b2bCustomInfoIndex.html
@@ -35,6 +35,9 @@
       <th>联系人</th>
       <th>联系电话</th>
       <th>邮箱</th>
+      <th>创建人</th>
+      <th>创建时间</th>
+      <th>最新修改时间</th>
       <th>操作</th>
     </tr>
   #{list items:dots, as:'b'}
@@ -44,6 +47,9 @@
       <td>${b.contacts}</td>
       <td>${b.contactPhone}</td>
       <td>${b.email}</td>
+      <td>${b.creator?.username}</td>
+      <td>#{time_tooltip time:b.createDate/}</td>
+      <td>#{time_tooltip time:b.updateDate/}</td>
       <td>
         <a href="@{Cooperators.createB2BCustomInfoPage(b.id)}" class="btn btn-mini btn-success">编辑</a>
       </td>
