修复手动单修改页面报错

--- a/core/app/views/ProcureUnits/editManualProcureUnit.html
+++ b/core/app/views/ProcureUnits/editManualProcureUnit.html
@@ -65,7 +65,7 @@
         </td>
         <th>质检取样</th>
         <td>
-          <input type="text" value="${unit.fetchCheckTaskQcSample()}" readonly/><span class="add-on">个</span>
+          <input type="text" value="0" readonly/><span class="add-on">个</span>
         </td>
       </tr>
       <tr>
