--- a/core/app/views/ProcureUnits/splitUnit.html
+++ b/core/app/views/ProcureUnits/splitUnit.html
@@ -78,7 +78,7 @@
       <tr>
         <th>运输方式</th>
         <td style="color:${unit.shipType?.rgb()}">${unit.shipType?.label()}</td>
-        <th>项目名称</th>
+        <th>所属公司</th>
         <td>${unit.projectName}</td>
         <td colspan="2"></td>
       </tr>
