--- a/core/app/views/header.html
+++ b/core/app/views/header.html
@@ -94,10 +94,10 @@
                   <li><a href="@{Cooperators.index()}">合作伙伴</a></li>
                 #{/power.ck}
                 #{power.ck "procures.b2bcustominfoindex"}
-                  <li><a href="@{Cooperators.b2bCustomInfoIndex()}">B2B客户基本信息</a></li>
+                  <li><a href="@{BtbCustoms.b2bCustomInfoIndex()}">B2B客户基本信息</a></li>
                 #{/power.ck}
                 #{power.ck "procures.btborderindex"}
-                  <li><a href="@{Orders.btbOrderIndex()}">B2B销售订单信息</a></li>
+                  <li><a href="@{BtbCustoms.btbOrderIndex()}">B2B销售订单信息</a></li>
                 #{/power.ck}
                 #{power.ck "procures.datapanel"}
                   <li><a href="@{ProcureUnits.dataPanel()}">日均采购计划</a></li>
