--- a/core/app/views/BtbCustoms/createB2BCustomInfoPage.html
+++ b/core/app/views/BtbCustoms/createB2BCustomInfoPage.html
@@ -18,7 +18,7 @@
 
 #{info_row title:'添加B2B客户信息' /}
 <div class="row-fluid">
-  <form action="@{Cooperators.createB2BCustom()}" method="post" id="update_product_form">
+  <form action="@{BtbCustoms.createB2BCustom()}" method="post" id="update_product_form">
     <table class="table table-bordered">
       <tr>
         <th>客户/公司名称<span style="color:red">*</span>：</th>
@@ -28,7 +28,7 @@
         </td>
         <th>收货联系人</th>
         <td>
-          <input type="text" name="b.receiver" value="${b.receiver}" required>
+          <input type="text" name="b.receiver" value="${b.receiver}">
         </td>
       </tr>
       <tr>
@@ -69,7 +69,7 @@
         <td></td>
         <td>
           <input type="submit" class="btn btn-primary" value="保存">
-          <a href="@{Cooperators.b2bCustomInfoIndex()}" class="btn btn-danger">取消</a>
+          <a href="@{BtbCustoms.b2bCustomInfoIndex()}" class="btn btn-danger">取消</a>
         </td>
         <td></td>
         <td></td>
