--- a/core/app/views/Deliveryments/manual.html
+++ b/core/app/views/Deliveryments/manual.html
@@ -56,11 +56,12 @@
   <tr>
     <th>B2B选项</th>
     <td colspan="3">
-      <label class="checkbox inline">
-        <input type="checkbox" name="units[0].isb2b" value="true">B2B
-      </label>
+      <select name="units[0].projectName">
+          #{list items:models.User.COR, as:'c'}
+            <option value="${c.name()}" ${c.name()==project?'selected':''}>${c.label()}</option>
+          #{/list}
+      </select>
     </td>
-
   </tr>
 
   <tr id="btn_tr">
@@ -104,9 +105,11 @@
   <tr>
     <th>B2B选项</th>
     <td colspan="3">
-      <label class="checkbox inline">
-        <input type="checkbox" name="units[<%= num %>].isb2b" value="true">B2B
-      </label>
+      <select name="units[<%= num %>].projectName">
+      #{list items:models.User.COR, as:'c'}
+        <option value="${c.name()}" ${c.name()==project?'selected':''}>${c.label()}</option>
+      #{/list}
+      </select>
     </td>
   </tr>
 </script>
