--- a/core/app/views/ProcureUnits/editManualProcureUnit.html
+++ b/core/app/views/ProcureUnits/editManualProcureUnit.html
@@ -75,17 +75,13 @@
           ${unit.stage.name()=='DELIVERY'? '' : 'readonly'}>
           <input type="hidden" name="unit.deliveryment.id" value="${unit.deliveryment?.id}">
         </td>
-        <th>B2B选项</th>
+        <th>所属公司</th>
         <td>
-          <label class="checkbox inline">
-            <input type="checkbox" name="unit.isb2b" value="true" #{if unit.projectName=='B2B'} checked #{/if}>
-            B2B
-          </label>
-
-          <label class="checkbox inline">
-            <input type="checkbox" name="unit.isSelfPick" value="true" #{if unit.isSelfPick} checked #{/if}>客户自提
-          </label>
-
+          <select name="unit.projectName">
+              #{list items:models.User.COR, as:'c'}
+                <option value="${c.name()}" ${c.name()==unit.projectName?'selected':''}>${c.label()}</option>
+              #{/list}
+          </select>
         </td>
       </tr>
 
