--- a/core/app/views/Shipments/_show_items.html
+++ b/core/app/views/Shipments/_show_items.html
@@ -12,7 +12,7 @@
 <form action="@{ShipItems.adjust()}" method="POST" id="adjust_ship_items">
   <div class="row-fluid">
     <div class="span12">
-    #{if ship.projectName == models.User.COR.B2B}
+    #{if ship.projectName == models.User.COR.MengTop}
       #{render './_b2b_shipitem.html', items: ship.items, itmRecord: true, isExpress: ship.type == models.procure.Shipment.T.EXPRESS/}
     #{/if}
       #{else }
