--- a/core/app/views/ProcureUnits/_splitOnSelling.html
+++ b/core/app/views/ProcureUnits/_splitOnSelling.html
@@ -118,7 +118,9 @@
   <td>
     <select name="newUnit.projectName">
     #{list items:models.User.COR, as:'c'}
-      <option value="${c.name()}" ${c.name()==unit.projectName?'selected':''}>${c.label()}</option>
+        #{if java.util.Arrays.asList(brandName,models.User.COR.MengTop.name()).contains(c.name())}
+          <option value="${c.name()}" ${c.name()==unit.projectName?'selected':''}>${c.label()}</option>
+        #{/if}
     #{/list}
     </select>
   </td>
