--- a/core/app/views/ProcureUnits/editManualProcureUnit.html
+++ b/core/app/views/ProcureUnits/editManualProcureUnit.html
@@ -79,7 +79,9 @@
         <td>
           <select name="unit.projectName">
               #{list items:models.User.COR, as:'c'}
-                <option value="${c.name()}" ${c.name()==unit.projectName?'selected':''}>${c.label()}</option>
+                  #{if java.util.Arrays.asList(brandName,models.User.COR.MengTop.name()).contains(c.name())}
+                    <option value="${c.name()}" ${c.name()==unit.projectName?'selected':''}>${c.label()}</option>
+                  #{/if}
               #{/list}
           </select>
         </td>
