--- a/core/app/views/Shipments/show.html
+++ b/core/app/views/Shipments/show.html
@@ -7,6 +7,7 @@
     #{script 'timeline/timeline_js/timeline-api.js'/}
     #{script 'analyzes/timeline.coffee'/}
     #{script 'shipments/show.coffee'/}
+    #{script 'shipments/show.es6'/}
     #{script 'shipments/paymentunits.coffee'/}
 #{/set}
 <style>
@@ -31,7 +32,7 @@
   <div class="row-fluid">
     <div class="span12">
     #{if ship.projectName == models.User.COR.MengTop}
-        #{render './_b2b_shipment.html', ship: ship, whouses: whouses, shippers: shippers/}
+        #{render './_b2b_shipment.html', ship: ship, whouses: whouses, shippers: shippers, customs:customs/}
     #{/if}
       #{else }
         #{render './_shipment.html', ship: ship, whouses: whouses, shippers: shippers/}
