--- a/core/app/views/StockRecords/stockIndex.html
+++ b/core/app/views/StockRecords/stockIndex.html
@@ -46,18 +46,18 @@
   <div class="span12">
     <table class="table table-condensed table-bordered">
       <tr>
-        <th width="120px;">仓库</th>
-        <th width="80px;">采购计划ID</th>
-        <th width="350px;">Selling</th>
-        <th width="200px;">SKU</th>
-        <th>名称</th>
-        <th width="60px;">入库数</th>
+        <th width="110px;">仓库</th>
+        <th width="70px;">采购计划ID</th>
+        <th width="300px;">Selling</th>
+        <th width="160px;">SKU</th>
+        <th width="160px">名称</th>
+        <th width="50px;">入库数</th>
         <th width="60px;">可用库存</th>
         <th width="60px;">不良品数</th>
-        <th>预计收货时间</th>
-        <th>实际收货时间</th>
-        <th width="120px;">FBA-ShipmentId</th>
-        <th>项目名称</th>
+        <th width="90px;">预计收货时间</th>
+        <th width="90px;">实际收货时间</th>
+        <th width="110px;">FBA-ShipmentId</th>
+        <th width="60xp;">项目名称</th>
         <th width="200px;">操作</th>
       </tr>
     #{list items: units, as: 'u'}
