--- a/core/app/views/Shipments/_b2b_shipitem.html
+++ b/core/app/views/Shipments/_b2b_shipitem.html
@@ -8,8 +8,10 @@
     <th width="180px;">Sku</th>
     <th><abbr rel='tooltip' title='计划数量 | 交货数量 | 运输数量'>Qty</abbr></th>
     <th>采购单</th>
-    <th width="140px;">预计发货时间<br>预计到库时间</th>
-    <th width="140px;">预计交货时间<br>实际交货时间</th>
+    <th>预计发货时间</th>
+    <th>预计到库时间</th>
+    <th>预计交货时间</th>
+    <th>实际交货时间</th>
     <th>供应商</th>
     <th>总重量(kg)</th>
     <th>包装信息</th>
@@ -17,7 +19,7 @@
     <th>质检结果</th>
     <th>运营创建人</th>
     <th>采购创建人</th>
-    <th width="70px;">丢失量<br>/赔偿金额</th>
+    <th>丢失量/赔偿金额</th>
   #{power.ck 'paymentunits.postfromtransport'}
       #{if isExpress}
         <th>记录运费</th>
@@ -48,14 +50,10 @@
     <td>
       <a href="@{Deliveryments.show(itm.unit.deliveryment?.id)}#${itm.unit.id}">${itm.unit.deliveryment?.id}</a>
     </td>
-    <td>
-      预计发货:#{time_tooltip time: itm.unit.attrs.planShipDate/}<br>
-      预计到库:#{time_tooltip time: itm.unit.attrs.planArrivDate/}
-    </td>
-    <td>
-      预计交货:#{time_tooltip time: itm.unit.attrs.planDeliveryDate/}<br>
-      实际交货:#{time_tooltip time: itm.unit.attrs.deliveryDate/}
-    </td>
+    <td>#{time_tooltip time: itm.unit.attrs.planShipDate/}</td>
+    <td>#{time_tooltip time: itm.unit.attrs.planArrivDate/}</td>
+    <td>#{time_tooltip time: itm.unit.attrs.planDeliveryDate/}</td>
+    <td>#{time_tooltip time: itm.unit.attrs.deliveryDate/}</td>
     <td>${itm.unit.cooperator?.name}</td>
     <td>${itm.totalWeight()}</td>
     <td>
