--- a/core/app/views/Shipments/_b2b_shipment.html
+++ b/core/app/views/Shipments/_b2b_shipment.html
@@ -20,7 +20,7 @@
     <tr>
       <th>预计运输时间</th>
       <td>
-        <input type="date" name="ship.dates.planBeginDate" value="${ship.dates?.planBeginDate.date()}">
+        <input type="date" name="ship.dates.planBeginDate" value="${ship.dates?.planBeginDate.date()}" required>
         实际运输时间: <input type="date" name="ship.dates.beginDate" value="${ship.dates?.beginDate.date()}">
       </td>
       <th>预计到库时间</th>
