--- a/core/app/views/ProcureUnits/indexWhouse.html
+++ b/core/app/views/ProcureUnits/indexWhouse.html
@@ -108,8 +108,7 @@
 
         <div class="input-prepend input-append inline">
           <span class="add-on"><i class="icon-search"></i></span>
-          <input type="text" style="width:300px;" class="input-medium" name="p.search" placeholder="出货单ID or sellingId or SKU"
-                 value="${p.search}">
+          <input type="text" name="p.search" placeholder="出货单ID or sellingId or SKU" value="${p.search}">
           <input type="hidden" name="p.page" value="${p.page}">
           <button class="btn btn-primary" data-loading>搜索</button>
         </div>
