--- a/core/app/views/Products/index.html
+++ b/core/app/views/Products/index.html
@@ -24,6 +24,11 @@
         <option ${s == p.state ? 'selected' : ''} value="${s}">${s}</option>
       #{/list}
       </select>
+
+        <label class="checkbox inline">
+          <input type="checkbox" name="p.scope" value="true"#{if p.scope} checked #{/if}> 全局搜索
+        </label>
+
       <div class="input-prepend input-append inline">
         <span class="add-on"><i class="icon-search"></i></span>
         <input type="hidden" name="p.page" value="${p.page}">
