包材物料开发

--- a/core/app/views/header.html
+++ b/core/app/views/header.html
@@ -57,6 +57,8 @@
                 #{power.ck "products.index"}
                   <li><a href="@{Products.index()}">产品</a></li>
                 #{/power.ck}
+              <li><a href="@{Materials.index()}">物料</a></li>
+              <li><a href="@{Materials.indexBom()}">包装BOM</a></li>
               <li class="divider"></li>
                 #{power.ck "categorys.show"}
                   <li><a href="@{Categorys.show()}">产品类别</a></li>
