--- a/core/app/views/header.html
+++ b/core/app/views/header.html
@@ -115,7 +115,7 @@
                   <li><a href="@{ShipItems.indexB2B()}">B2B运输</a></li>
                 #{/power.ck}
                 #{power.ck "shipments.indexb2b"}
-                  <li><a href="@{Shipments.index()}">运输单</a></li>
+                  <li><a href="@{Shipments.indexB2B()}">B2B运输单</a></li>
                 #{/power.ck}
             </ul>
           </li>
