b2B相关功能调优，已经屏蔽selling上架功能

--- a/core/app/views/Sellings/createSelling.html
+++ b/core/app/views/Sellings/createSelling.html
@@ -18,9 +18,9 @@
     </div>
     <div class="span1"></div>
 
-    <label class="radio inline" id="amzradio">
+   *{ <label class="radio inline" id="amzradio">
       <input type="radio" name="createtype" value="amz" class="radio"><b>AMZ上架</b>
-    </label>
+    </label>}*
     <label class="radio inline">
       <input type="radio" name="createtype" value="add" class="radio"><b>添加Selling</b>
     </label>
