--- a/core/app/views/BtbCustoms/b2bCustomInfoIndex.html
+++ b/core/app/views/BtbCustoms/b2bCustomInfoIndex.html
@@ -39,7 +39,7 @@
       <th>创建人</th>
       <th>创建时间</th>
       <th>最新修改时间</th>
-      <th width="100px;">操作</th>
+      <th width="190px;">操作</th>
     </tr>
   #{list items:dots, as:'b'}
     <tr>
@@ -56,7 +56,8 @@
       <td>#{time_tooltip time:b.createDate/}</td>
       <td>#{time_tooltip time:b.updateDate/}</td>
       <td>
-        <a href="@{BtbCustoms.createB2BCustomInfoPage(b.id)}" class="btn btn-mini btn-success">Edit</a>
+        <a href="@{BtbCustoms.createBtbOrderByCustom(b.id)}" class="btn btn-mini btn-success">新建订单</a>
+        <a href="@{BtbCustoms.createB2BCustomInfoPage(b.id)}" class="btn btn-mini btn-primary">Edit</a>
         <a href="@{BtbCustoms.deleteB2BCustom(b.id)}" class="btn btn-mini btn-danger">Delete</a>
       </td>
     </tr>
